Fixed an issue when collapsing fieldsets caused it to "jump" 2 pixels.
git-svn-id: http://code.extjs.com/svn/ext/trunk@2919 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -509,7 +509,15 @@ textarea {
 }
 fieldset.x-panel-collapsed {
     padding-bottom:0 !important;
+    border-width: 1px 1px 0 1px !important;
+    border-left-color: transparent;
+    border-right-color: transparent;
+}        
+.ext-ie6 fieldset.x-panel-collapsed{
+    padding-bottom:0 !important;
     border-width: 1px 0 0 0 !important;
+    margin-left: 1px;
+    margin-right: 1px;
 }
 fieldset.x-panel-collapsed .x-fieldset-bwrap {
     visibility:hidden;
